hphp/hack/test/typecheck/magic_methods/magic_unset.php.exp
File "magic_unset.php", line 4, characters 3-32:
Magic `__unset` methods are no longer supported (Parsing[1002])
