hphp/hack/test/typecheck/magic_methods/magic_unset.php
<?hh

class C {
  public function __unset():void {}
}
